fix: types and twa
