# backend/src/transactions/transactions.controller.ts
@@ -14,10 +14,10 @@ import {
   ApiResponse,
   ApiTags,
 } from '@nestjs/swagger';
-import { Transaction as TransactionDto } from 'src/types/prisma/transaction';
 import { JwtAuthGuard } from '../auth/guards/jwt-auth.guard';
 import { PrismaService } from '../prisma/prisma.service';
 import { RequestWithUser } from '../types/request';
+import { CreateTransactionDto } from './dto/create-transaction-dto';
 import { TransactionsService } from './transactions.service';
 
 @ApiTags('transactions')
@@ -34,8 +34,11 @@ export class TransactionsController {
   @ApiOperation({ summary: 'Top up balance for a contact' })
   @ApiResponse({ status: 201, description: 'Balance topped up successfully' })
   @ApiResponse({ status: 404, description: 'Contact or currency not found' })
-  @ApiBody({ type: TransactionDto })
-  async topup(@Request() req: RequestWithUser, @Body() dto: TransactionDto) {
+  @ApiBody({ type: CreateTransactionDto })
+  async topup(
+    @Request() req: RequestWithUser,
+    @Body() dto: CreateTransactionDto,
+  ) {
     // Verify that contact belongs to user
     const contact = await this.prisma.contact.findFirst({
       where: {
@@ -59,8 +62,11 @@ export class TransactionsController {
   @ApiOperation({ summary: 'Withdraw balance from a contact' })
   @ApiResponse({ status: 201, description: 'Balance withdrawn successfully' })
   @ApiResponse({ status: 404, description: 'Contact or currency not found' })
-  @ApiBody({ type: TransactionDto })
-  async withdraw(@Request() req: RequestWithUser, @Body() dto: TransactionDto) {
+  @ApiBody({ type: CreateTransactionDto })
+  async withdraw(
+    @Request() req: RequestWithUser,
+    @Body() dto: CreateTransactionDto,
+  ) {
     // Verify that contact belongs to user
     const contact = await this.prisma.contact.findFirst({
       where: {
